--- a/carousel.html
+++ b/carousel.html
@@ -13,9 +13,9 @@
             "react": "https://esm.sh/react@18.2.0",
             "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
             "lucide-react": "https://esm.sh/lucide-react@0.292.0",
-            "firebase/app": "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js",
-            "firebase/auth": "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js",
-            "firebase/firestore": "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js"
+            "firebase/app": "https://esm.sh/firebase@10.7.1/app",
+            "firebase/auth": "https://esm.sh/firebase@10.7.1/auth",
+            "firebase/firestore": "https://esm.sh/firebase@10.7.1/firestore"
         }
     }
     </script>
@@ -23,7 +23,6 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
     <script>
-        // PASTE YOUR FIREBASE CONFIG HERE
         const firebaseConfigObj = {
             apiKey: "AIzaSyAcfGOfyb4PyeGldC7d-LQxKUN3yW6zVmE",
             authDomain: "aitools-535d8.firebaseapp.com",
@@ -32,13 +31,12 @@
             messagingSenderId: "861802991842",
             appId: "1:861802991842:web:8ad63322de06a381528ebb",
             measurementId: "G-SH6Q7KL24K"
-};
         };
 
-        // Setting globals expected by the React code
+        // Setting globals
         window.__firebase_config = JSON.stringify(firebaseConfigObj);
         window.__app_id = "default-app-id"; 
-        window.__initial_auth_token = undefined; // Set this if you have a token
+        window.__initial_auth_token = undefined;
     </script>
 </head>
 <body class="bg-slate-50">
@@ -99,7 +97,6 @@
         const appId = typeof window.__app_id !== 'undefined' ? window.__app_id : 'default-app-id';
 
         // --- Types ---
-        // (Note: In pure JS/Babel standalone, interfaces are stripped, but kept here for the Babel TS preset)
         interface ContentPost {
             id: string;
             topic: string;
