--- a/packlnw.html
+++ b/packlnw.html
@@ -124,7 +124,7 @@
         <div class="relative max-w-7xl mx-auto px-4 z-10">
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 text-left animate-fade-in-up" style="animation-delay: 0.1s;">
-                    <span class="inline-block py-1 px-3 rounded-full bg-red-100 text-brand-red mb-6 text-sm font-bold tracking-wider hover:bg-red-200 transition cursor-default">PROPOSAL 2024-2025</span>
+                    <span class="inline-block py-1 px-3 rounded-full bg-red-100 text-brand-red mb-6 text-sm font-bold tracking-wider hover:bg-red-200 transition cursor-default">present by Qwerty House 2026</span>
                     <h1 class="text-5xl md:text-7xl font-bold mb-6 leading-tight text-brand-textMain">
                         Pack<span class="text-brand-red inline-block hover:animate-pulse">Lnw</span> <br>
                         Beyond Fulfillment
